tests/should-not-compile/void-formal-parameter.talc
// EXPECTED ERROR: variables such as "v" cannot have void type
function int f(v:void) { return 123; }
